- FreeBSD might generate gzipped formatted manual pages

--- a/.gitignore
+++ b/.gitignore
@@ -54,9 +54,11 @@ missing
 mkinstalldirs
 newsyslog
 newsyslog-[0-9]*-Preview.*
+newsyslog.8.gz
 newsyslog.8.html
 newsyslog.8.html-dist
 newsyslog.8.ps-dist
+newsyslog.conf.5.gz
 newsyslog.conf.5.html
 newsyslog.conf.5.html-dist
 newsyslog.conf.5.ps-dist
