- W0D0 doesn't make sense (on /var/log/important) -- use W0

--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -5,7 +5,7 @@
 # demonstration and documentation purposes and are not necessarily the
 # best for real life use!
 #
-#ident "#(@):$Name:  $:$Id: newsyslog.conf,v 1.13 2006/09/29 19:48:54 woods Exp $"
+#ident "#(@):$Name:  $:$Id: newsyslog.conf,v 1.14 2007/07/18 22:10:57 woods Exp $"
 #
 # log_filename  [owner:group] mode count kb   hrs/at [flgs][/pid_file][sig]
 #               |             |    |     |    |      |     |
@@ -17,7 +17,7 @@
 /var/log/debug                640  4     1000 168    Z0               
 /var/log/httpd/access_log     644  5     *   D0 Z0 /var/run/httpd.pid USR1
 /var/log/httpd/error_log      644  5     *   D0 Z0 /var/run/httpd.pid USR1
-/var/log/important            644  6     *    W0D0   Z0
+/var/log/important            644  6     *    W0     Z0
 /var/log/kerberos.log         640  10    *    D0     Z0    /dev/null
 /var/log/kern                 644  10    500  *      Z0
 /var/log/local                644  10    1000 168    Z0
