--- a/newsyslog.conf
+++ b/newsyslog.conf
@@ -5,33 +5,33 @@
 # demonstration and documentation purposes and are not necessarily the
 # best for real life use!
 #
-#ident "#(@):$Name:  $:$Id: newsyslog.conf,v 1.14 2007/07/18 22:10:57 woods Exp $"
+#ident "#(@):$Name:  $:$Id: newsyslog.conf,v 1.15 2009/03/04 19:38:04 woods Exp $"
 #
 # log_filename  [owner:group] mode count kb   hrs/at [flgs][/pid_file][sig]
-#               |             |    |     |    |      |     |
-/var/log/aculog uucp:dialer   640  10    *    ML     Z0    /dev/null sigint
-/var/log/auth                 640  10    100  *      Z0
-/var/log/authpriv             640  10    100  *      Z0
-/var/log/cron                 640  3     *    D0     Z0               HUP
-/var/log/daemon               644  8     500  168    Z0               hup
-/var/log/debug                640  4     1000 168    Z0               
-/var/log/httpd/access_log     644  5     *   D0 Z0 /var/run/httpd.pid USR1
-/var/log/httpd/error_log      644  5     *   D0 Z0 /var/run/httpd.pid USR1
-/var/log/important            644  6     *    W0     Z0
-/var/log/kerberos.log         640  10    *    D0     Z0    /dev/null
-/var/log/kern                 644  10    500  *      Z0
-/var/log/local                644  10    1000 168    Z0
-/var/log/lpd-errs daemon:staff 644 4     100  *      Z0
-/var/log/lpr                  644  5     250  *      Z0
-/var/log/mail  root:staff     640  52    *    W0     Z0
-/var/log/messages             644  10    500  168    Z
-/var/log/news  news:news      644  2     *    D0     Z0
-/var/log/smail/logfile        644  52    *    W0     DZ0   /dev/null
-/var/log/smail/paniclog       644  5     500  168-D0 DZ0   /dev/null
-/var/log/syslog               640  3     500  *      Z0
-/var/log/user                 644  10    500  *      Z0
-/var/log/uucp  uucp:operator  644  5     *    W0     Z0
-/var/log/wtmp                 644  10    *    ML     bZ0
-/var/log/xferlog              640  10    *    W0     Z0
-/var/spool/uucp/Debug uucp:daemon 600 4  100  *      ZD0   /dev/null
-/var/spool/uucp/Log   uucp:daemon 644 10 *    W0     ZD0   /dev/null
+#               |             |    |     |    |      |     |          |
+/var/log/aculog uucp:dialer   640  10    *    ML     DZ/0  /dev/null  SIGINT
+/var/log/auth                 640  10    100  *      Z/0              sighup
+/var/log/authpriv             640  10    100  *      Z/0
+/var/log/cron                 640  3     *    D0     Z/0              HUP
+/var/log/daemon               644  8     500  168    Z/0              hup
+/var/log/debug                640  4     1000 168    Z/0
+/var/log/httpd/access_log     644  5     *  D0 Z/0 /var/run/httpd.pid USR1
+/var/log/httpd/error_log      644  5     *  D0 Z/0 /var/run/httpd.pid USR1
+/var/log/important            644  6     *    W0     Z/0
+/var/log/kerberos.log         640  10    *    D0     bDNZ/0
+/var/log/kern                 644  10    500  *      Z/0
+/var/log/local                644  10    1000 168    Z/0
+/var/log/lpd-errs daemon:staff 644 4     100  *      Z/0
+/var/log/lpr                  644  5     250  *      Z/0
+/var/log/mail  root:staff     640  52    *    W0     Z/0
+/var/log/messages             644  10    500  168    Z/
+/var/log/news  news:news      644  2     *    D0     Z/0
+/var/log/smail/logfile        644  52    *    W0     bDNZ/0
+/var/log/smail/paniclog       644  5     500  168-D0 bDNZ/0
+/var/log/syslog               640  3     500  *      Z/0
+/var/log/user                 644  10    500  *      Z/0
+/var/log/uucp  uucp:operator  644  5     *    W0     Z/0
+/var/log/wtmp                 644  10    *    ML     bZ/0
+/var/log/xferlog              640  10    *    W0     Z/0
+/var/spool/uucp/Debug uucp:daemon 600 4  100  *      bDNZ/0
+/var/spool/uucp/Log   uucp:daemon 644 10 *    W0     bDNZ/0
